--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,8 @@
 	--cl-white:					#ffffff;
 	--cl-grey:					#efefef;
 	--cl-grey-dark:				#c1c1c1;
-	--cl-primary:				#5f207a;
-	--cl-primary-dark:			#451859;
+	--cl-primary:				#641a45;
+	--cl-primary-dark:			#dc002e;
 	--cl-primary-text:			var(--cl-white);
 	--cl-secondary:				rgb(198, 0, 109);
 	--cl-secondary-rgba:		rgba(198, 0, 109, .25);
@@ -32,8 +32,8 @@
 	--fw-medium:				700;
 	--fw-bold:					900;
 				
-	--ff-primary:				'lexia', serif;
-	--ff-secondary:				'Lato', sans-serif;
+	--ff-primary:				'Fira Sans', sans-serif;
+	--ff-secondary:				'Libre Baskerville', serif;
 
 	// shape
 
@@ -48,3 +48,5 @@
 	--br-square-bottom-left:	128px;
 
 };
+
+@import '../partials/blocks/rooms/rooms';
