--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,7 @@
   --br-square-bottom-left:	128px;
 }
 
-h2.custom {
-  background-color: red;
-  color: white;
-  font-size: 48px;
+section.rooms .card__text p {
+  margin-bottom: 48px;
+  padding: 0;
 }
