--- a/css/style.css
+++ b/css/style.css
@@ -30,13 +30,99 @@
   --br-rectangle-top-right:	4px;
   --br-rectangle-bottom-right:	4px;
   --br-rectangle-bottom-left:	4px;
+  --br-rectangle:	4px;
   --br-square-top-left:	128px;
   --br-square-top-right:	128px;
   --br-square-bottom-right:	128px;
   --br-square-bottom-left:	128px;
+  --br-square:	128px;
 }
 
 section.rooms .card__text p {
   margin-bottom: 48px;
   padding: 0;
+}
+
+section.book {
+  padding-block: 48px;
+}
+section.book .wrapper {
+  max-width: 1920px;
+  background-color: var(--cl-grey);
+  padding: 48px;
+  border-radius: var(--br-rectangle);
+}
+section.book .wrapper form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 24px;
+}
+section.book .wrapper form input:not(.button),
+section.book .wrapper form select {
+  width: 100%;
+  border-radius: var(--br-rectangle);
+  border: none;
+  padding: 0 24px;
+  cursor: pointer;
+  -webkit-transition: all ease-in 0.2s;
+  -o-transition: all ease-in 0.2s;
+  transition: all ease-in 0.2s;
+}
+section.book .wrapper form input:not(.button):hover,
+section.book .wrapper form select:hover {
+  opacity: 0.64;
+}
+section.book .wrapper form input[type=date] {
+  position: relative;
+}
+section.book .wrapper form input[type=date]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  width: 100%;
+  height: 64px;
+  background-image: url(../img/schedule.svg);
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: calc(100% - 24px) center;
+  cursor: pointer;
+}
+section.book .wrapper form input[type=date]::-webkit-inner-spin-button {
+  display: none;
+  -webkit-appearance: none;
+}
+section.book .wrapper .button {
+  margin-bottom: 0;
+}
+section.book.book--white {
+  background: var(--cl-white);
+}
+section.book.book--grey {
+  background: var(--cl-grey);
+}
+section.book.book--grey .wrapper {
+  background: var(--cl-white);
+}
+section.book.book--grey input:not(.button),
+section.book.book--grey select {
+  background-color: var(--cl-grey);
+}
+section.book.book--black {
+  background: var(--cl-black);
+}
+section.book.book--primary {
+  background: var(--cl-primary);
+}
+section.book.book--secondary {
+  background: var(--cl-secondary);
 }
