--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,5 +51,23 @@
 
 };
 
+@mixin tablet {
+	@media only screen and (min-width: 640px) {
+		@content;
+	}
+}
+
+@mixin desktop {
+	@media only screen and (min-width: 1280px) {
+		@content;
+	}
+}
+
+@mixin custom($size) {
+	@media only screen and (min-width: $size) {
+		@content;
+	}
+}
+
 @import '../partials/blocks/rooms/rooms';
 @import '../partials/blocks/book/book';
