--- a/css/style.css
+++ b/css/style.css
@@ -56,21 +56,30 @@ section.book .wrapper form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   gap: 24px;
 }
+@media only screen and (min-width: 1280px) {
+  section.book .wrapper form {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
 section.book .wrapper form input:not(.button),
 section.book .wrapper form select {
   width: 100%;
+  height: 64px;
+  padding: 0 24px;
   border-radius: var(--br-rectangle);
   border: none;
-  padding: 0 24px;
   cursor: pointer;
   -webkit-transition: all ease-in 0.2s;
   -o-transition: all ease-in 0.2s;
@@ -79,6 +88,10 @@ section.book .wrapper form select {
 section.book .wrapper form input:not(.button):hover,
 section.book .wrapper form select:hover {
   opacity: 0.64;
+}
+section.book .wrapper form input:not(.button).display_none,
+section.book .wrapper form select.display_none {
+  display: none;
 }
 section.book .wrapper form input[type=date] {
   position: relative;
@@ -100,6 +113,40 @@ section.book .wrapper form input[type=date]::-webkit-calendar-picker-indicator {
 section.book .wrapper form input[type=date]::-webkit-inner-spin-button {
   display: none;
   -webkit-appearance: none;
+}
+section.book .wrapper form .select {
+  position: relative;
+  width: 100%;
+}
+section.book .wrapper form .select select {
+  position: relative;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+section.book .wrapper form .select select::-ms-expand {
+  display: none;
+}
+section.book .wrapper form .select::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 24px;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  height: 16px;
+  aspect-ratio: 1/1;
+  background-color: var(--cl-black);
+  -webkit-mask-image: url(../img/caret.svg);
+          mask-image: url(../img/caret.svg);
+  -webkit-mask-size: 16px 16px;
+          mask-size: 16px 16px;
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+          mask-position: center;
+  pointer-events: none;
 }
 section.book .wrapper .button {
   margin-bottom: 0;
