added quantity and titles to the bookings form

--- a/partials/blocks/book/_book.scss
+++ b/partials/blocks/book/_book.scss
@@ -17,6 +17,14 @@ section.book{
 				flex-direction: row;
 			}
 
+			div{
+				width: 100%;
+
+				p{
+					padding-bottom: 8px;
+				}
+			}
+
 			input:not(.button),
 			select{
 				width: 100%;
@@ -94,6 +102,7 @@ section.book{
 		}
 
 		.button{
+			margin-top: auto;
 			margin-bottom: 0;
 		}
 	}
