--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,12 @@ section.book .wrapper form {
             flex-direction: row;
   }
 }
+section.book .wrapper form div {
+  width: 100%;
+}
+section.book .wrapper form div p {
+  padding-bottom: 8px;
+}
 section.book .wrapper form input:not(.button),
 section.book .wrapper form select {
   width: 100%;
@@ -149,6 +155,7 @@ section.book .wrapper form .select::after {
   pointer-events: none;
 }
 section.book .wrapper .button {
+  margin-top: auto;
   margin-bottom: 0;
 }
 section.book.book--white {
