--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  Theme Name: Hotel Mijdrecht theme
  Template:   websquad-base
- Version: 1
+ Version: 24-05-2023:17:15
  Author: Team Switch
 */
