--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,26 @@
   --br-square:	128px;
 }
 
+.whatsapp-container {
+  display: none;
+}
+
+.cubilis-ratebox.cubilis-ratebox--bottom {
+  left: 48px;
+  right: auto;
+}
+@media only screen and (min-width: 1280px) {
+  .cubilis-ratebox.cubilis-ratebox--bottom {
+    left: 96px;
+  }
+}
+
 section.rooms .card__text p {
   margin-bottom: 48px;
   padding: 0;
+}
+section.rooms .card__button .button--filled-primary {
+  margin-bottom: 24px;
 }
 
 section.book {
