gutenberg load bug fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  Theme Name: Hotel Mijdrecht theme
  Template:   websquad-base
- Version: 24-05-2023:17:15
+ Version: 25-05-2023-11:08
  Author: Team Switch
 */
