--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  Theme Name: Hotel Mijdrecht theme
  Template:   websquad-base
- Version: 26-05-2023-10:04
+ Version: 2023.05.26.1
  Author: Team Switch
 */
