--- a/partials/blocks/book/_book.scss
+++ b/partials/blocks/book/_book.scss
@@ -32,6 +32,7 @@ section.book{
 				padding: 0 24px;
 				border-radius: var(--br-rectangle);
 				border: none;
+				font-size: var(--fs-tiny);
 				cursor: pointer;
 				transition: all ease-in 0.2s;
 
