--- a/partials/blocks/book/_book.scss
+++ b/partials/blocks/book/_book.scss
@@ -98,6 +98,7 @@ section.book{
 					mask-repeat: no-repeat;
 					mask-position: center;
 					pointer-events: none;
+					z-index: 2;
 				}
 			}
 		}
