Title in booking form, bugs fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,11 +7,11 @@
 	--cl-primary:				#641a45;
 	--cl-primary-dark:			#dc002e;
 	--cl-primary-text:			var(--cl-white);
-	--cl-secondary:				rgb(198, 0, 109);
-	--cl-secondary-rgba:		rgba(198, 0, 109, .25);
-	--cl-secondary:				#db0079;
+	--cl-secondary:				rgb(220, 0, 46);
+	--cl-secondary-rgba:		rgba(220, 0, 46, .25);
+	--cl-secondary:				#DC002E;
 	--cl-secondary-text:		var(--cl-white);
-	--cl-error:					#db4437;
+	--cl-error:					#DC002E;
 					
 	// font					
 					
