--- a/partials/blocks/book/_book.scss
+++ b/partials/blocks/book/_book.scss
@@ -7,6 +7,10 @@ section.book{
 		padding: 48px;
 		border-radius: var(--br-rectangle);
 
+		h3{
+			padding-bottom: 24px;
+		}
+
 		form{
 			display: flex;
 			flex-direction: column;
