--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,13 @@ section.book {
 section.book .wrapper {
   max-width: 1920px;
   background-color: var(--cl-grey);
-  padding: 48px;
   border-radius: var(--br-rectangle);
+  padding: 48px 24px;
+}
+@media only screen and (min-width: 640px) {
+  section.book .wrapper {
+    padding: 48px;
+  }
 }
 section.book .wrapper h3 {
   padding-bottom: 24px;
@@ -141,8 +146,30 @@ section.book .wrapper form select.display_none {
 }
 section.book .wrapper form input[type=date] {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+section.book .wrapper form input[type=date]::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: var(--cl-grey);
+  width: 64px;
+  height: 64px;
+  -webkit-mask-image: url(../img/schedule.svg);
+          mask-image: url(../img/schedule.svg);
+  -webkit-mask-size: 20px;
+          mask-size: 20px;
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+          mask-position: center;
+  cursor: pointer;
 }
 section.book .wrapper form input[type=date]::-webkit-calendar-picker-indicator {
+  background-image: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -150,10 +177,6 @@ section.book .wrapper form input[type=date]::-webkit-calendar-picker-indicator {
   background-color: transparent;
   width: 100%;
   height: 64px;
-  background-image: url(../img/schedule.svg);
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: calc(100% - 24px) center;
   cursor: pointer;
 }
 section.book .wrapper form input[type=date]::-webkit-inner-spin-button {
