--- a/partials/blocks/book/_book.scss
+++ b/partials/blocks/book/_book.scss
@@ -67,6 +67,8 @@ section.book{
 					// left: 0;
 					right: 0;
 					background-color: var(--cl-black);
+					opacity: 0.48;
+					// background-color: transparent;
 					width: 64px;
 					height: 64px;
 					mask-image: url(../img/schedule.svg);
