--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,11 +5,11 @@
 	--cl-grey:					#efefef;
 	--cl-grey-dark:				#c1c1c1;
 	--cl-primary:				#641a45;
-	--cl-primary-dark:			#dc002e;
+	--cl-primary-dark:			rgb(80, 20, 55);
 	--cl-primary-text:			var(--cl-white);
-	--cl-secondary:				rgb(220, 0, 46);
-	--cl-secondary-rgba:		rgba(220, 0, 46, .25);
+	// --cl-secondary:				rgb(220, 0, 46);
 	--cl-secondary:				#DC002E;
+	--cl-secondary-rgba:		rgba(220, 0, 46);
 	--cl-secondary-text:		var(--cl-white);
 	--cl-error:					#DC002E;
 					
