bug booking form solved

--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ section.book .wrapper form input[type=date]::after {
   -webkit-mask-position: center;
           mask-position: center;
   cursor: pointer;
+  pointer-events: none;
 }
 section.book .wrapper form input[type=date]::-webkit-calendar-picker-indicator {
   background-image: none;
