--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,42 @@
   opacity: 1;
 }
 
+section.reference .tns-outer {
+  position: relative;
+}
+section.reference .tns-outer::after {
+  content: "";
+  background-color: var(--cl-black);
+  height: 48px;
+  width: 128px;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  -webkit-mask-image: url(../img/Tripadvisor_Logo.svg);
+          mask-image: url(../img/Tripadvisor_Logo.svg);
+  -webkit-mask-size: contain;
+          mask-size: contain;
+  -webkit-mask-position: center;
+          mask-position: center;
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+}
+@media only screen and (min-width: 1280px) {
+  section.reference .tns-outer::after {
+    top: initial;
+    bottom: 0;
+  }
+}
+section.reference--black .tns-outer::after {
+  background-color: var(--cl-white);
+}
+section.reference--primary .tns-outer::after {
+  background-color: var(--cl-primary-text);
+}
+section.reference--secondary .tns-outer::after {
+  background-color: var(--cl-secondary-text);
+}
+
 section.rooms .card__text p {
   margin-bottom: 48px;
   padding: 0;
