--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@
 }
 
 @media only screen and (min-width: 1280px) {
-  section.hero hero__half_half .tns-outer .slide img {
+  section.hero .hero__half_half .tns-outer .slide img {
     aspect-ratio: 16/9;
   }
 }
