--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,7 +112,7 @@
 	}
 }
 
-section.hero hero__half_half .tns-outer .slide img{
+section.hero .hero__half_half .tns-outer .slide img{
 	@include desktop{
 		aspect-ratio: 16 / 9;
 	}
